# Nix

./: .gitignore  LICENSE  Makefile  README.md  config.mk  meson.build  nix.pc.in
.github/workflows/: ci.yml
examples/: main.nix
source/: nix.c
source/ast/: ast.c  meson.build
source/core/: common.c  meson.build
source/include/: ast.h  common.h
source/parser/: lexer.l  meson.build  parser.y
